--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Protocolo Zero Banha</title>
+    <title>Programa zero banha</title>
     
     <style type="text/css">
       body {
@@ -41,11 +41,10 @@
             <h3 class="my-4"><b>Simples Vitamina de 6 Ingredientes Derrete Muita Gordura</b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+            <div style="padding:56.25% 0 0 0;position:relative;"><iframe frameborder="0" allowfullscreen src="https://cdn.converteai.net/b5c56f08-4a25-416c-8346-6fe53fd66c4f/players/62296e648ee1e90008561df2/embed.html" id="ifr_62296e648ee1e90008561df2" style="position:absolute;top:0;left:0;width:100%;height:100%;" referrerpolicy="origin"></iframe></div>
             <!-- Botão -->
             <div id="cta1" class="mt-4 d-none">
-              <a href="https://pay.kiwify.com.br/8yj82EU" class="a-btn" style="text-decoration: none;">
+              <a href="https://pay.kiwify.com.br/0KvF4TJ" class="a-btn" style="text-decoration: none;">
                 <span class="span-btn">QUERO OBTER ACESSO!</span>
                 <span class="span-btn2">(atenção: vagas limitadas)</span>
               </a>
