--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Ritual Secreto Do Viatnã Derrete 5 á 15kg</b></h3>
+            <h3 class="my-4"><b>Ritual Secreto Do Viatnã Derrete Muita Gordura</b></h3>
 
             <!-- VSL -->
           <script type="text/javascript" id="scr_6233e43896ef4b0009baf094">var s=document.createElement("script");s.src="https://cdn.converteai.net/b5c56f08-4a25-416c-8346-6fe53fd66c4f/players/6233e43896ef4b0009baf094/player.js",s.async=!0,document.head.appendChild(s);</script>
